language_tests/source_files/valid/panic_unwind_double_panic.tr
// EXPECT_EXIT: 1
// EXPECT_STDERR_CONTAINS: panic: panic while unwinding
// EXPECT_STDERR_CONTAINS: taro stack:
func main() {
    defer {
        panic("second")
    }
    panic("first")
}
