language_tests/source_files/invalid/defer_control_flow.tr
func main() {
    defer { break }
    defer { continue }
    defer { return }
}
